[tool.poetry]
name = "cimbrasnowrides"
version = "0.1.0"
description = ""
authors = ["daniele arosio <daniele.arosio@cnr.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
